# os

./: .gitignore  README.md  makefile  run.bat  run.sh  shell.nix
asm-src/: boot.asm  grub.cfg  header.asm  linker.ld  long_mode.asm
base/: Cargo.toml
base/src/: lib.rs  pic.rs
base/src/display/: macros.rs  mod.rs  mode_switch.rs  universal.rs  vga.rs  vga_graphics.rs
base/src/input/: k_swedish.rs  mod.rs
builtins/src/: beginners.txt  startup.txt
builtins/src/apps/: dir.rs  help.rs
fs/src/: apps.rs  handle.rs  path.rs
os/: Cargo.toml
os/.cargo/: config.toml
os/base/: Cargo.toml
os/base/src/: app.rs  forth.rs  input.rs  lib.rs  pic.rs
os/base/src/display/: buffer.rs  formatter.rs  macros.rs  mod.rs  universal.rs  vga.rs  vga_graphics.rs
os/base/src/input/: k_swedish.rs  mapping.rs  mod.rs
os/builtins/: Cargo.toml
os/builtins/src/: lib.rs
os/builtins/src/apps/: cd.rs  cls.rs  dir.rs  fe.rs  foreditor.rs  forth.rs  help.rs  mod.rs  run.rs  view.rs
os/fs/: Cargo.toml
os/fs/src/: apps.rs  directory.rs  file.rs  handle.rs  lib.rs  path.rs
os/src/: forth.rs  fs.rs  lib.rs
os/src/apps/: dir.rs  help.rs  mod.rs
os/src/cpuid/: features.rs  mod.rs
os/src/display/: buffer.rs  formatter.rs  generics.rs  macros.rs  mod.rs  mode_switch.rs  primitives.rs  vga.rs  vga_graphics.rs
os/src/easter_eggs/: kagg.rs  mod.rs
os/src/input/: mod.rs
os/src/interrupt/: gatedescriptor.rs  mod.rs  setup.rs  table.rs  timer.rs
os/src/keyboard/: mod.rs
os/src/memory/: frame.rs  mod.rs  page_table.rs
os/src/memory/allocator/: alternate.rs  big_man.rs  binary_tree.rs  mod.rs  state.rs
os/src/memory/paging/: master.rs  mod.rs  page.rs  table.rs  temporary.rs
os/src/multiboot_info/: elf.rs  memory_map.rs  mod.rs
os/src/panic/: formatter.rs  mod.rs
src/: lib.rs
src/cpuid/: mod.rs
src/easter_eggs/: mod.rs
src/input/: mod.rs
src/interrupt/: gatedescriptor.rs  mod.rs  setup.rs  table.rs
src/memory/: mod.rs
src/memory/allocator/: binary_tree.rs  state.rs
src/memory/paging/: temporary.rs
src/multiboot_info/: mod.rs
src/panic/: mod.rs
