[package]
name = "os"
version = "0.2.0"
edition = "2021"
authors = ["Viktor Karlsson", "RipSquid"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
test = false




[dependencies]
x86_64 = "0.14.10"
bitflags = "2.4.0"
pic8259 = "0.10.4"
ps2 = "0.2.0"
