[package]
name = "os"
version = "0.2.0"
edition = "2021"
authors = ["Viktor Karlsson", "Julle Juliusson Keuschnig"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
test = false




[dependencies]

# Access to various x86 instructions that would otherwise need assembly code
x86_64 = "0.14.10"

# Bitflags on types
bitflags = "2.4.0"

# Access to the pic8259 controller, responsible for handling interrupts.
pic8259 = "0.10.4"

# PS2 interface
ps2 = "0.2.0"

heapless = "0.8.0"

# A no_std Hashmap
hashbrown = "0.14.2"

# no_std RwLock built on spinning
spin = {version = "0.9.8", features = ["rwlock"]}